# RealEngine

./: .gitignore  .gitmodules  CMakeLists.txt  RealEngine.pro  build.sh  prepare.sh  run.sh
CMake/: FileListImGui.txt
source/: MainWindow.cpp  MainWindow.h  RealEngine.cpp  RealEngine.h  main.cpp
source/Common/: logging.h
source/Common/Components/: Transform.cpp  Transform.h  Vertex.h
source/MessageSystem/: Message.cpp  Message.h  MessageBus.cpp  MessageBus.h  Messenger.cpp  Messenger.h
source/Modules/MessageSystem/: Message.cpp  Message.h  MessageBus.cpp  MessageBus.h  MessageType.h  Messenger.cpp  Messenger.h
source/Modules/Objects/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
source/Modules/Objects/Components/: Transform.cpp  Transform.h
source/Modules/Objects/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h
source/Modules/Renderer/: DirectionalLight.h  ImGuiManager.cpp  ImGuiManager.h  PointLight.h  Renderer.cpp  Renderer.h  ShaderType.h  TextureType.h  Window.cpp  Window.h
source/Modules/Renderer/Interface/: IShader.h  ITexture2D.cpp  ITexture2D.h  IVertexArray.h
source/Modules/Renderer/OpenGL/: OpenGLCamera.cpp  OpenGLCamera.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLLighting.cpp  OpenGLLighting.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderingObject.cpp  OpenGLRenderingObject.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
source/Modules/Renderer/OpenGL/Shaders/: debug_normal_shader.glsl  debug_texCoords_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
source/Ui/: FileMenu.cpp  FileMenu.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ObjectListWidget.cpp  ObjectListWidget.h  ObjectTransformWidget.cpp  ObjectTransformWidget.h  ObjectTransformWidget.ui
